@@ -105,5 +105,8 @@ their review privilege may have it temporarily suspended on the
 request of any two Reviewers. In such a case, the requesting Reviewers
 should notify the webkit-reviewers list with a description of the
 offense. At this point, Reviewer or Committer status will be
-temporarily suspend for one week, pending outcome of the vote for
+temporarily suspended for one week, pending outcome of the vote for
 permanent revocation.</p>
+<?php
+    include("../footer.inc");
+?>
