@@ -1,3 +1,7 @@
+2007-11-30  Darin Adler  <darin@apple.com>
+
+        * coding/commit-review-policy.html: Fixed a typo, added a footer.
+
 2007-11-30  Matt Lilek  <webkit@mattlilek.com>
 
         Reviewed by Maciej.
